--- a/PrimerasTablas/Base.lproj/Main.storyboard
+++ b/PrimerasTablas/Base.lproj/Main.storyboard
@@ -1,25 +1,67 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PrimerasTablas" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p1v-aV-urL">
+                                <rect key="frame" x="20" y="110" width="335" height="537"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="hyz-jh-col"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="SYy-qi-f4E"/>
+                                </connections>
+                            </tableView>
+                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="20" translatesAutoresizingMaskIntoConstraints="NO" id="JDp-ix-1Ft">
+                                <rect key="frame" x="128" y="36" width="118" height="31"/>
+                                <animations/>
+                                <connections>
+                                    <action selector="slideBar:" destination="BYZ-38-t0r" eventType="valueChanged" id="MY6-sP-Evv"/>
+                                </connections>
+                            </slider>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="JDp-ix-1Ft" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="110" id="TcA-SX-BDT"/>
+                            <constraint firstItem="p1v-aV-urL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fc3-vi-dRO"/>
+                            <constraint firstItem="p1v-aV-urL" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="lYl-7K-uHg"/>
+                            <constraint firstItem="JDp-ix-1Ft" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="r52-UD-K7a"/>
+                            <constraint firstItem="p1v-aV-urL" firstAttribute="top" secondItem="JDp-ix-1Ft" secondAttribute="bottom" constant="44" id="rEs-5L-Vu9"/>
+                            <constraint firstItem="p1v-aV-urL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="xPB-Mq-BdX"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="p1v-aV-urL" secondAttribute="bottom" constant="20" id="xiY-1c-Q8n"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="JDp-ix-1Ft" secondAttribute="trailing" constant="111" id="yUd-la-F59"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="xPB-Mq-BdX"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tabla" destination="p1v-aV-urL" id="lIr-lz-qKx"/>
+                        <outlet property="valor" destination="JDp-ix-1Ft" id="Zfd-ST-VoU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="447.5" y="449.5"/>
         </scene>
     </scenes>
 </document>
